# incident-triage-copilot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  compose.yaml  pyproject.toml  triage.py
.github/workflows/: ci.yml
incident_triage/: __init__.py  analyzer.py  api.py  cli.py  models.py  parser.py  rules.py  service.py  similarity.py  storage.py  versions.py
tests/: test_analyzer.py  test_api.py  test_cli.py  test_parser.py  test_service.py  test_storage.py
